# recovery

./: .gitignore  README.md  __init__.py  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
assets/thunder/urdf/: thunder.urdf  thunder_0131copy.urdf
config/: __init__.py  recovery_env_cfg.py  recovery_ppo_cfg.py
mdp/: rewards.py
scripts/: cli_args.py  play.py  train.py
src/thunder_recovery/: __init__.py
src/thunder_recovery/config/: __init__.py  asset.py  recovery_env_cfg.py  recovery_env_cfg_getup.py  recovery_ppo_cfg.py
src/thunder_recovery/config/method1_deng/: __init__.py  env_cfg.py
src/thunder_recovery/config/method2_getup/: __init__.py  env_cfg.py
src/thunder_recovery/mdp/: __init__.py  events.py  observations.py  rewards.py  rewards_getup.py
src/thunder_recovery/mdp/method1_deng/: __init__.py  events.py  rewards.py
src/thunder_recovery/mdp/method2_getup/: __init__.py  events.py  rewards.py
